fix: text-align center for post table with colSpan-element

--- a/src/app/components/Elements/Elements.scss
+++ b/src/app/components/Elements/Elements.scss
@@ -308,6 +308,9 @@
 
     td.right,
     th.right { text-align: right; }
+
+    td.colSpan,
+    th.colSpan { text-align: center; }
   }
 }
 
